--- a/CalculatorService.Client/CalculatorService.Client.csproj
+++ b/CalculatorService.Client/CalculatorService.Client.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
+    <PackageReference Include="Flurl.Http" Version="3.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CalculatorService.Server\CalculatorService.Server.csproj" />
   </ItemGroup>
 
 </Project>
